--- a/src/custom.css
+++ b/src/custom.css
@@ -1,5 +1,10 @@
 /* Custom CSS */
 body {
     background-color: rgb(235, 235, 202);
+    /* background-color: rgb(206, 227, 245); */
+    font-family:'Montserrat' , sans-serif;
+    font-weight: 250;
+
+
+    
   }
-  
