--- a/src/custom.css
+++ b/src/custom.css
@@ -2,8 +2,8 @@
 body {
     background-color: rgb(235, 235, 202);
     /* background-color: rgb(206, 227, 245); */
-    font-family:'Montserrat' , sans-serif;
-    font-weight: 250;
+    font-family:'SF Pro' , sans-serif;
+    font-weight: 400;
 
 
     
