--- a/src/custom.css
+++ b/src/custom.css
@@ -4,7 +4,15 @@ body {
     /* background-color: rgb(206, 227, 245); */
     font-family:'SF Pro' , sans-serif;
     font-weight: 400;
-
-
     
+  }
+
+  html {
+    font-family:'SF Pro' , sans-serif;
+    font-size: 15px;
+  }
+
+  h1, h2, h3, h4, h5, h6{
+    font-family:'SF Pro' , sans-serif;
+
   }
