--- a/src/custom.css
+++ b/src/custom.css
@@ -1,7 +1,7 @@
 /* Custom CSS */
 body {
+    /* background-color: #dfece0; */
     background-color: rgb(235, 235, 202);
-    /* background-color: rgb(206, 227, 245); */
     font-family:'SF Pro' , sans-serif;
     font-weight: 400;
     
